# us-sale-analytic

./: .gitignore  README.md  data_modeling.md  preprocessing.py  pyproject.toml  requirements.txt  run_app.py  run_etl.py
etl/: bigquery.py  ingest.py
src/: .gitignore  bq_etl.py  main.py
src/components/: bar_chart.py  color.py  group_bar_chat.py  histogram.py  layout.py  map.py  pie_chart.py  table.py
src/data/: data_loader.py
src/postgres_migration/: create_obt_table.sql
us_sale_project/: dbt_project.yml
us_sale_project/models/: schema.yml  sources.yml
us_sale_project/models/dim/: dim_customer.sql  dim_date.sql  dim_order.sql  dim_product.sql
us_sale_project/models/fct/: fct_sales.sql
us_sale_project/models/obt/: obt.sql
us_sale_project/models/stg/: stg_sales_processed.sql
us_sale_project/snapshots/: snapshot_sales_processed.sql
