[tool.poetry]
name = "us-sale"
version = "0.1.0"
description = "US Sale Data Analytics"
authors = ["Narapady <chhuoynarapady@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polar = "^0.0.118"
pandas = "2.1"
tabulate = "^0.9.0"
google-cloud-bigquery = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
